# aipreflight

./: .gitignore  README.md  TODO.md  conftest.py  docker-compose.observability.yml  prometheus.example.yml  pyproject.toml  thresholds.yml
.github/workflows/: ci.yml
aipreflight/: __init__.py  analyze.py  appcheck.py  checks.py  cli.py  compare.py  cost.py  diagnose.py  doctor.py  errors.py  evals.py  metrics.py  probes.py  profile.py  report.py
configs/llmprobe/: ollama.yml  runpod-gpu.yml  vllm-k8s.yml  vllm.yml
configs/prometheus/: queries.yml
demo/: demo-replay.sh  demo.tape
docs/: architecture.md  linkedin-post-aipreflight.md  outreach-snippets.md  runpod-gpu-setup.md
examples/hosted-api-app/: README.md  app.py  llm.py  observability.yml  requirements.txt
examples/rag-app/: README.md  observability.yml  rag.py
fixtures/: sample-probes.jsonl
fixtures/evals/: failing.json  malformed.json  passing.json
grafana/: dashboard.json
k8s/: dcgm-exporter.yml  readiness-gate-job.yml  servicemonitor.yml  vllm-deployment.yml  vllm-service.yml
profiles/: app.yml  inference.yml  rag.yml
reports/examples/: cross-engine-comparison.md  (+7 more)
runbooks/: error-spikes.md  high-ttft.md  kv-cache-pressure.md  network-overhead.md  queue-pressure.md  rollback.md
scripts/: compare.py  demo-quick.sh  diagnose.py  gate.sh  generate_report.py  install-deps.sh  report.py  run_probe.sh  sweep.sh  sweep_concurrency.sh
tests/: test_appcheck.py  test_cli.py  test_compare.py  test_cost.py  test_diagnose.py  test_doctor.py  test_evals.py  test_integration.py  test_profile.py  test_rag.py  test_report.py
(+5 files in other folders)
