[project]
name = "inference-readiness-kit"
version = "0.1.0"
description = "Automated go/no-go decisions for LLM inference deployments"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[project.urls]
Repository = "https://github.com/Jwrede/inference-readiness-kit"
