[project]
name = "aipreflight"
version = "0.1.0"
description = "Production readiness gate for AI applications and LLM inference endpoints"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[project.urls]
Repository = "https://github.com/Jwrede/aipreflight"
