[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "aipreflight"
version = "0.1.0"
description = "Production readiness gate for AI applications and LLM inference endpoints"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "tokentoll>=0.6"]
example = ["fastapi>=0.110", "httpx>=0.27", "uvicorn>=0.29"]

[project.scripts]
aipreflight = "aipreflight.cli:main"

[tool.setuptools.packages.find]
include = ["aipreflight*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[project.urls]
Repository = "https://github.com/Jwrede/aipreflight"
